--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">DeltaSix</string>
-    <string name="title_activity_test">TestActivity</string>
+    <string name="title_activity_login">ورود</string>
 </resources>
