--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DeltaSix</string>
     <string name="title_activity_login">ورود</string>
+    <string name="Mobile_No">شماره موبایل نامعتر است</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
